--- a/JuegoTimbiriche/src/main/java/com/itson/frames/FrmConfigurarPartida.form
+++ b/JuegoTimbiriche/src/main/java/com/itson/frames/FrmConfigurarPartida.form
@@ -120,7 +120,7 @@
                   <EmptySpace pref="19" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="btnCrearPartida" max="32767" attributes="0"/>
-                      <Component id="jButton2" pref="163" max="32767" attributes="0"/>
+                      <Component id="btnVolverInicio" pref="163" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
               </Group>
@@ -132,7 +132,7 @@
                   <EmptySpace min="-2" pref="140" max="-2" attributes="0"/>
                   <Component id="btnCrearPartida" min="-2" pref="45" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
-                  <Component id="jButton2" min="-2" pref="45" max="-2" attributes="0"/>
+                  <Component id="btnVolverInicio" min="-2" pref="45" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -152,8 +152,11 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Crear Partida"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCrearPartidaActionPerformed"/>
+          </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton2">
+        <Component class="javax.swing.JButton" name="btnVolverInicio">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="66" red="33" type="rgb"/>
@@ -166,6 +169,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Volver al inicio"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVolverInicioActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
